--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "@fortawesome/fontawesome": "^1.1.8",
         "@fortawesome/fontawesome-free-brands": "^5.0.13",
         "@material/button": "^0.35.0",
+        "@material/card": "^0.35.0",
         "@material/theme": "^0.35.0",
         "@material/typography": "^0.35.0"
     },
@@ -27,8 +28,8 @@
         "ts-loader": "^4.3.0",
         "typescript": "^2.8.3",
         "uglifyjs-webpack-plugin": "^1.2.5",
-        "webpack": "^4.8.3",
-        "webpack-cli": "^2.1.3",
+        "webpack": "^4.9.1",
+        "webpack-cli": "^2.1.4",
         "webpack-dev-server": "^3.1.4"
     }
 }
